# editor

./: CMakeLists.txt
include/: Scene.hxx  Window.hxx
include/Components/: Renderable.hxx
include/ImGuiCore/: ComponentEditor.hxx  Editor.hxx  EntityModule.hxx  ImGuiManager.hxx  SystemsEditor.hxx
include/ImGuiCore/TypeTemplate/: Template.hxx  createValue.hxx
include/Systems/: PhysicsSystem.hxx  RenderableSystem.hxx
scripts/: components.pvt
source/: Window.cxx  main.cxx
source/ImGuiCore/: ComponentEditor.cxx  Editor.cxx  EntityModule.cxx  ImGuiManager.cxx  SystemsEditor.cxx
source/Systems/: PhysicsSystem.cxx  RenderableSystem.cxx
